# DCC

./: CMakeLists.txt  Makefile  README.en.md  README.md  Third_Party_Open_Source_Software_Notice  build.sh  config.sh  dependency.xml
src/: CMakeLists.txt  Makefile
src/client/: CMakeLists.txt  Makefile  clt_core.c  clt_core.h  clt_defs.h  clt_interface.c  clt_lease_manager.c  clt_lease_manager.h  clt_msg_adaptor.h  clt_watch_manager.c  clt_watch_manager.h
src/client/interface/: clt_interface.h
src/executor/: CMakeLists.txt  Makefile  executor.c  executor.h  executor_defs.h  executor_lease.c  executor_lease.h  executor_lease_expire.c  executor_lease_expire.h  executor_utils.c  executor_utils.h  executor_watch.c  executor_watch.h  executor_watch_group.c  executor_watch_group.h  interval_tree.c  interval_tree.h
src/server/: CMakeLists.txt  Makefile  server.c  srv_agent.c  srv_agent.h  srv_api.c  srv_cmd_exe.c  srv_cmd_exe.h  srv_config.c  srv_config.h  srv_instance.c  srv_instance.h  srv_logger.c  srv_logger.h  srv_lsnr.c  srv_lsnr.h  srv_param.c  srv_param.h  srv_reactor.c  srv_reactor.h  srv_session.c  srv_session.h  srv_watch.c  srv_watch.h
src/storage/: CMakeLists.txt  Makefile  db_handle.h  gstor_adpt.c  gstor_adpt.h  storage.c  storage.h
src/storage/gstor/: CMakeLists.txt  Makefile  gstor_executor.c  gstor_executor.h  gstor_handle.c  gstor_handle.h  gstor_instance.h  gstor_param.c  gstor_param.h  gstor_rm.c  gstor_rm.h  gstor_sga.c  gstor_sga.h  gstor_sys_def.c  gstor_sys_def.h
src/storage/gstor/zekernel/: CMakeLists.txt  Makefile
src/storage/gstor/zekernel/common/: CMakeLists.txt  Makefile  cm_array.c  cm_array.h  cm_atomic.h  cm_base.h  cm_bilist.c  cm_bilist.h  cm_binary.c  cm_binary.h  cm_buddy.c  cm_buddy.h  cm_chan.c  cm_chan.h  cm_charset.c  cm_charset.h  cm_checksum.c  cm_checksum.h  cm_config.c  cm_config.h  cm_context_pool.c  cm_context_pool.h  cm_coredump.h  cm_date.c  cm_date.h  cm_debug.h  cm_dec4.c  cm_dec4.h  cm_dec8.c  cm_dec8.h  cm_decimal.h  cm_defs.h  cm_device.c  cm_device.h  cm_encrypt.c  cm_encrypt.h  cm_entropy.c  cm_entropy.h  cm_epoll.c  cm_epoll.h  (+88 more)
src/storage/gstor/zekernel/common/variant/: opr_add.c  opr_add.h  opr_bits.c  opr_bits.h  opr_cat.c  opr_cat.h  opr_div.c  opr_div.h  opr_mod.c  opr_mod.h  opr_mul.c  opr_mul.h  opr_sub.c  opr_sub.h  var_aggr.h  var_cast.c  var_cast.h  var_cmp.c  var_cmp.h  var_column.h  var_defs.c  var_defs.h  var_func.h  var_inc.h  var_opr.c  var_opr.h  var_plsql.h  var_typmode.c  var_typmode.h
src/storage/gstor/zekernel/kernel/: CMakeLists.txt  Makefile  knl_core_table_defs.h  knl_database.c  knl_database.h  knl_db_alter.c  knl_db_alter.h  knl_db_create.c  knl_db_create.h  knl_db_ctrl.c  knl_db_ctrl.h  knl_extern_table_defs.h  knl_interface.c  knl_sys_part_defs.h
src/storage/gstor/zekernel/kernel/backup/: bak_build.c  bak_build.h  bak_common.c  bak_common.h  bak_paral.c  bak_paral.h  bak_restore.c  bak_restore.h  knl_backup.c  knl_backup.h
src/storage/gstor/zekernel/kernel/buffer/: knl_buffer.c  knl_buffer.h  knl_buffer_access.c  knl_buffer_access.h  knl_buffer_log.c  knl_buffer_log.h  knl_buflatch.h  knl_page.c  knl_page.h  pcr_pool.c  pcr_pool.h
src/storage/gstor/zekernel/kernel/catalog/: dc_dump.c  dc_dump.h  dc_log.c  dc_log.h  dc_part.c  dc_part.h  dc_priv.c  dc_priv.h  dc_seq.c  dc_seq.h  dc_subpart.c  dc_subpart.h  dc_tbl.c  dc_tbl.h  dc_tenant.c  dc_tenant.h  dc_user.c  dc_user.h  dc_util.c  dc_util.h  knl_comment.c  knl_comment.h  knl_ctlg.c  knl_ctlg.h  knl_dblink.c  knl_dc.c  knl_dc.h  knl_privilege.c  knl_privilege.h  knl_profile.c  knl_profile.h  knl_tenant.c  knl_tenant.h  knl_user.c  knl_user.h
src/storage/gstor/zekernel/kernel/common/: knl_common.h  knl_compress.c  knl_compress.h  knl_context.c  knl_context.h  knl_ctrl_restore.c  knl_ctrl_restore.h  knl_mtrl.c  knl_mtrl.h  knl_session.h  knl_sort_page.c  knl_sort_page.h  knl_syncpoint.c  knl_syncpoint.h
src/storage/gstor/zekernel/kernel/daemon/: knl_ashrink.c  knl_ashrink.h  knl_dlock_stack.h  knl_rmon.c  knl_rmon.h  knl_smon.c  knl_smon.h
src/storage/gstor/zekernel/kernel/flashback/: knl_fbdr.c  knl_fbdr.h  knl_flashback.c  knl_flashback.h  rb_purge.c  rb_purge.h  rb_truncate.c  rb_truncate.h
src/storage/gstor/zekernel/kernel/include/: alck_defs.h  db_defs.h  dcl_defs.h  ddl_defs.h  dml_defs.h  index_defs.h  knl_defs.h  knl_interface.h  mtrl_defs.h  obj_defs.h  persist_defs.h  repl_defs.h  session_defs.h  sharding_defs.h  stats_defs.h  sysdba_defs.h  temp_defs.h  xact_defs.h
src/storage/gstor/zekernel/kernel/index/: index_common.c  index_common.h  index_paral.c  knl_index.c  knl_index.h  pcr_btree.c  pcr_btree.h  pcr_btree_log.c  pcr_btree_log.h  pcr_btree_scan.c  pcr_btree_scan.h  pcr_btree_stat.c  pcr_btree_stat.h  rcr_btree.c  rcr_btree.h  rcr_btree_log.c  rcr_btree_log.h  rcr_btree_scan.c  rcr_btree_scan.h  rcr_btree_stat.c  rcr_btree_stat.h  temp_btree.c  temp_btree.h
src/storage/gstor/zekernel/kernel/lob/: knl_lob.c  knl_lob.h  lob_log.c  lob_log.h
src/storage/gstor/zekernel/kernel/persist/: knl_abr.c  knl_abr.h  knl_archive.c  knl_archive.h  knl_ckpt.c  knl_ckpt.h  knl_log.c  knl_log.h  knl_log_file.c  knl_log_file.h  knl_log_mgr.h  knl_log_type.h  knl_recovery.c  knl_recovery.h
src/storage/gstor/zekernel/kernel/replication/: knl_gbp.c  knl_gbp.h  knl_gbp_message.h  repl_arch_fetch.c  repl_arch_fetch.h  repl_log_recv.c  repl_log_recv.h  repl_log_replay.c  repl_log_replay.h  repl_log_send.c  repl_log_send.h  repl_msg.c  repl_msg.h  repl_raft.c  repl_raft.h
src/storage/gstor/zekernel/kernel/sequence/: knl_sequence.c  knl_sequence.h
src/storage/gstor/zekernel/protocol/: CMakeLists.txt  Makefile  cs_ipc.c  cs_ipc.h  cs_listener.c  cs_listener.h  cs_packet.h  cs_pipe.c  cs_pipe.h  cs_protocol.c  cs_protocol.h  cs_rdma.c  cs_rdma.h  cs_ssl.c  cs_ssl.h  cs_tcp.c  cs_tcp.h  cs_uds.c  cs_uds.h
src/tools/dcc_ctl/: CMakeLists.txt  Makefile  dcc_ctl.c  dcc_ctl_execute.c  dcc_ctl_execute.h
src/tools/dcc_encrypt/: CMakeLists.txt  Makefile  dcc_encrypt.c
test/test_main/: CMakeLists.txt  README.md  test_main.cpp
(+74 files in other folders)
